<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <!--KYC DOCUMENT LIST-->
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kyc_documents"
            android:layout_marginTop="5dp"
            android:textStyle="bold"
            android:visibility="gone"
            android:textSize="16sp"
            android:layout_marginStart="10dp"
            android:textColor="@color/primary_color"
            android:fontFamily="@font/poppins_medium"
            android:layout_marginLeft="10dp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/docs_name"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_medium"
            android:id="@+id/docs_name"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"/>

    </androidx.appcompat.widget.LinearLayoutCompat>


    <!--VEHICLE DOCUMENT LIST-->
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        >

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vehicle_documents"
            android:layout_marginTop="5dp"
            android:textStyle="bold"
            android:visibility="gone"
            android:textSize="16sp"
            android:layout_marginStart="10dp"
            android:textColor="@color/primary_color"
            android:fontFamily="@font/poppins_medium"
            android:layout_marginLeft="10dp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:visibility="gone"
            android:layout_height="wrap_content"
            android:text="@string/docs_name"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_medium"
            android:id="@+id/vehicle_docs_name"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"/>


    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>