<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <data>

        <variable
            name="profile"
            type="com.voila.voilasailor.driverRegistration.viewModel.DriverProfileViewModel" />

    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".driverRegistration.DriverProfileActivity">

        <!-- AppBar layout for using Toolbar as AppBar -->
        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <!-- ToolBar widget -->
                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/primary_color"
                    android:minHeight="?attr/actionBarSize"
                    android:theme="?attr/actionBarTheme"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:title="  Driver Profile"
                    app:titleTextColor="#ffff"
                    />


                <!-- ImageView beside title of ToolBar -->
                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:src="@drawable/ic_arrow_back"
                    app:tint="#ffff"
                    android:layout_marginStart="5dp"
                    android:paddingRight="15dp"
                    tools:ignore="MissingConstraints,RtlSymmetry"
                    android:paddingEnd="15dp"
                    android:visibility="visible"
                    android:layout_marginLeft="5dp"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.appbar.AppBarLayout>


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/basic_information"
                android:textSize="16sp"
                android:fontFamily="@font/poppins_medium"
                android:textColor="@color/black"
                android:layout_marginTop="5dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address_information"
                android:textSize="16sp"
                android:fontFamily="@font/poppins_medium"
                android:textColor="@color/black"
                android:layout_marginTop="5dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kyc_information"
                android:textSize="16sp"
                android:fontFamily="@font/poppins_medium"
                android:textColor="@color/black"
                android:layout_marginTop="5dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vehicle_information"
                android:textSize="16sp"
                android:fontFamily="@font/poppins_medium"
                android:textColor="@color/black"
                android:layout_marginTop="5dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vehicle_documents"
                android:textSize="16sp"
                android:fontFamily="@font/poppins_medium"
                android:textColor="@color/black"
                android:layout_marginTop="5dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp" />


        </androidx.appcompat.widget.LinearLayoutCompat>

        <!--  Recycler view -->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/recycler_view_parent_layout"
            android:visibility="gone"
            >

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/recycler_view"
                />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

</layout>